# agentic-identity

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  LICENSE  PRD.md  README.md  ROADMAP.md  SECURITY.md  demo.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  spec_feedback.md
.github/workflows/: ci.yml
acp/: config.py  database.py  demo.py  demo_agent.py  landing.py  main.py
acp/api/: agents.py  approvals.py  attestations.py  audit.py  budgets.py  cloud.py  demo.py  policies.py  replay.py  session.py  traces.py
acp/cli/: main.py
acp/console/: app.js  index.html  styles.css
acp/models/: __init__.py  agent.py  approval.py  audit.py  budget.py  policy.py  tenant.py  trace.py
acp/primitives/approvals/: engine.py  notifications.py
acp/primitives/audit/: logger.py  reports.py
acp/primitives/budget/: tracker.py
acp/primitives/identity/: credentials.py  service.py
acp/primitives/observability/: tracer.py
acp/primitives/policy/: dsl.py  engine.py
acp/primitives/replay/: session.py
acp/proxy/: interceptor.py
ais/: ATTESTATION.md  README.md  SPEC.md
ais/examples/: agent-assertion.payload.json  attestation-response.json  issuer-metadata.json  jwks.json
ais/schema/: agent-identity.schema.json
demo/: README.md  demo.py
docs/: architecture.md  comparison.md  overview.md  problem.md  threat-model.md  use-cases.md
examples/: README.md  gateway_enforcement.py
sdk/: README.md  pyproject.toml  test_sdk.py
sdk/ais_verify/: __init__.py  _discover.py  _jwt.py  exceptions.py  types.py  verifier.py
spec/: CONFORMANCE.md  README.md  SPEC.md
spec/examples/: attestation-request.json  issuer-metadata.json
tests/: test_adversarial.py  test_audit.py  test_identity.py  test_policy.py
